--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             <div class="form-box">
                 <p style="color: var(--dark-color);">اطلب الآن واستفد من العرض المحدود!</p>
                 
-                <form name="contact" method="POST" action="/thankyou.html" data-netlify="true">
+                <form name="order" method="POST" data-netlify="true" action="thankyou.html">
                     <input type="hidden" name="selected_offer" id="selected-offer-input" value="single">
                     
                     <label for="offer-display" style="text-align: right; display: block; margin-bottom: 5px;">العرض المختار:</label>
@@ -828,4 +828,6 @@
     </script>
 </body>
 </html>
+
+
 
