--- a/index.html
+++ b/index.html
@@ -828,8 +828,17 @@
         // اختيار العرض الأول كافتراضي وتحديث الملخص عند تحميل الصفحة
         selectOffer('single');
     </script>
+<script>
+function redirectToThankYou() {
+  setTimeout(function() {
+    window.location.href = "thankyou.html";
+  }, 500);
+}
+</script>
 </body>
 </html>
+
+
 
 
 
