--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         </div>
     </section>
     
-    <section class="hero">
+    <section class="hero">https://i.imgur.com/1BDPPhx.png
         <div class="hero-image">
             <img src="https://i.imgur.com/oD4jG7f.png" alt="صورة توضيحية للنحل والعسل في الطبيعة">
         </div>
@@ -837,6 +837,7 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
 
 
 
