--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     
     <section class="hero">https://i.imgur.com/1BDPPhx.png
         <div class="hero-image">
-            <img src="https://i.imgur.com/oD4jG7f.png" alt="صورة توضيحية للنحل والعسل في الطبيعة">
+            <img src="https://i.imgur.com/1BDPPhx.png" alt="صورة توضيحية للنحل والعسل في الطبيعة">
         </div>
         <div class="container" style="text-align: center; margin-top: 15px;">
             <h2>حماية من الحلويات الضارة</h2>
@@ -837,6 +837,8 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
+
 
 
 
