--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <h2 class="section-title">اختر العرض الذي يناسبك</h2>
             <div class="offers-section">
                 <div class="offer-item selected" data-offer="single">
-                    <img src="https://i.imgur.com/gK65j8s.png" alt="عبوة واحدة من المنتج">
+                    <img src="https://i.imgur.com/O3rJ2vh.png" alt=" عبوة واحدة من المنتج">
                     <h3>عبوة واحدة</h3>
                     <p>بسعر 215 ألف</p>
                 </div>
@@ -835,6 +835,9 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
+
+
 
 
 
