--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             </div>
             <div class="ingredient-item">
                 <div class="ingredient-image">
-                    <img src="https://i.imgur.com/x0qS7cZ.jpg" alt="حبوب لقاح طازجة">
+                    <img src="https://i.imgur.com/x8IIB4C.jpg" alt="حبوب لقاح طازجة">
                 </div>
                 <div class="ingredient-text">
                     <h3>حبوب اللقاح الطازجة</h3>
@@ -835,6 +835,8 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
+
 
 
 
