--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             <h2 class="section-title">المكونات وفوائدها</h2>
             <div class="ingredient-item">
                 <div class="ingredient-image">
-                    <img src="https://i.imgur.com/8F20P2F.jpg" alt="عسل جبلي نقي">
+                    <img src="https://i.imgur.com/q4aM5oK.png" alt="عسل جبلي نقي">
                 </div>
                 <div class="ingredient-text">
                     <h3>العسل الجبلي النقي</h3>
@@ -835,6 +835,8 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
+
 
 
 
