--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             </div>
             <div class="ingredient-item">
                 <div class="ingredient-image">
-                    <img src="https://i.imgur.com/02Fp6Qp.jpg" alt="غذاء ملكات النحل">
+                    <img src="https://i.imgur.com/Xz7KkaS.png" alt="غذاء ملكات النحل">
                 </div>
                 <div class="ingredient-text">
                     <h3>غذاء ملكات النحل (مضاف)</h3>
@@ -835,6 +835,8 @@ function redirectToThankYou() {
 </script>
 </body>
 </html>
+
+
 
 
 
