--- a/index.html
+++ b/index.html
@@ -833,76 +833,44 @@ function redirectToThankYou() {
   }, 500);
 }
 </script>
-<!-- زر اطلب الآن ثابت -->
+<!-- زر اطلب الآن -->
 <a href="#order" class="floating-btn">اطلب الآن</a>
 
 <style>
-/* تنسيق الزر */
 .floating-btn {
   position: fixed;
-  bottom: 20px; /* المسافة من الأسفل */
-  right: 20px;  /* المسافة من اليمين */
-  background-color: #FF6600; /* برتقالي غامق */
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #2E7D32; /* أخضر داكن قليلاً */
   color: white;
-  padding: 15px 25px;
-  border-radius: 50px;
-  font-size: 18px;
+  padding: 10px 20px; /* حجم صغير نسبياً */
+  border-radius: 30px;
+  font-size: 16px;
   font-weight: bold;
   text-decoration: none;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  z-index: 9999; /* يخليه فوق كل العناصر */
-  animation: bounce 1.5s infinite; /* حركة */
-  transition: transform 0.2s ease-in-out;
+  z-index: 9999;
+  animation: agitation 0.3s infinite;
 }
 
-/* تأثير عند المرور */
 .floating-btn:hover {
-  transform: scale(1.1);
-  background-color: #e65c00;
+  background-color: #1B5E20; /* أخضر أغمق عند التمرير */
+  transform: translateX(-50%) scale(1.1);
 }
 
-/* أنيميشن التمايل */
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-8px); }
+@keyframes agitation {
+  0% { transform: translateX(-50%) rotate(0deg); }
+  25% { transform: translateX(-50%) rotate(-2deg); }
+  50% { transform: translateX(-50%) rotate(2deg); }
+  75% { transform: translateX(-50%) rotate(-2deg); }
+  100% { transform: translateX(-50%) rotate(0deg); }
 }
 </style>
-<!-- زر اطلب الآن -->
-   <a href="#order" class="floating-btn">اطلب الآن</a>
-
-   <style>
-   .floating-btn {
-     position: fixed;
-     bottom: 20px;
-     left: 50%;
-     transform: translateX(-50%);
-     background-color: #CC5500; /* برتقالي داكن */
-     color: white;
-     padding: 15px 30px;
-     border-radius: 50px;
-     font-size: 20px;
-     font-weight: bold;
-     text-decoration: none;
-     box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-     z-index: 9999;
-     animation: swing 2s infinite ease-in-out;
-     transition: transform 0.2s ease-in-out;
-   }
-   .floating-btn:hover {
-     transform: translateX(-50%) scale(1.1);
-     background-color: #993d00; /* أغمق عند التمرير */
-   }
-
-   @keyframes swing {
-     0% { transform: translateX(-50%) rotate(0deg); }
-     25% { transform: translateX(-52%) rotate(-3deg); }
-     50% { transform: translateX(-50%) rotate(0deg); }
-     75% { transform: translateX(-48%) rotate(3deg); }
-     100% { transform: translateX(-50%) rotate(0deg); }
-   }
-   </style>
 </body>
 </html>
+
+
 
 
 
