--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
     ⏰ العرض ينتهي هذا الأسبوع! 🚨 سارع بالطلب الآن قبل نفاد الكمية!
   </marquee>
   <div class="top-buttons">
-    <a href="tel:+213600000000" class="phone-btn">📞 اتصل بنا</a>
-    <a href="https://wa.me/213600000000" target="_blank" class="whatsapp-btn">💬 واتساب</a>
+    <a href="tel:+213662277555" class="phone-btn">📞 اتصل بنا</a>
+    <a href="https://wa.me/213662277555" target="_blank" class="whatsapp-btn">💬 واتساب</a>
   </div>
 </div>
 
@@ -581,7 +581,10 @@
 </style>
 
     <header>
-        <div class="container">
+        <div class="second-bar">
+  <a href="tel:0555000000" class="phone-link">📞 0555 00 00 00</a>
+  <a href="https://wa.me/213555000000" class="whatsapp-link">💬 واتساب</a>
+</div>
             <h1>عسل الأطفال: طاقة وذكاء ونمو صحي</h1>
             <p>وداعاً للحلويات الضارة! امنح طفلك هدية الطبيعة... مذاق حلو وفوائد عظيمة.</p>
         </div>
@@ -918,6 +921,9 @@ function redirectToThankYou() {
 </style>
 
 </html>
+
+
+
 
 
 
