--- a/index.html
+++ b/index.html
@@ -532,7 +532,8 @@
         }
     </style>
 </head>
-<body><!-- شريط علوي للتنبيه -->
+<body>
+<!-- شريط علوي للتنبيه -->
 <div class="top-banner">
   <marquee behavior="scroll" direction="right" scrollamount="6">
     ⏰ العرض ينتهي هذا الأسبوع! 🚨 سارع بالطلب الآن قبل نفاد الكمية!
@@ -921,6 +922,8 @@ function redirectToThankYou() {
 </style>
 
 </html>
+
+
 
 
 
