--- a/index.html
+++ b/index.html
@@ -579,9 +579,9 @@
 }
 </style>
  <header>
-        <div class="second-bar">
-  <a href="tel:0555000000" class="phone-link">📞 0555 00 00 00</a>
-  <a href="https://wa.me/213555000000" class="whatsapp-link">💬 واتساب</a>
+       <a href="tel:0555000000" class="phone-link">📞 0555 00 00 00</a>
+  <a href="https://wa.me/213555000000" class="whatsapp-link">💬 واتساب</a> <div class="second-bar">
+  
 </div>
             <h1>عسل الأطفال: طاقة وذكاء ونمو صحي</h1>
             <p>وداعاً للحلويات الضارة! امنح طفلك هدية الطبيعة... مذاق حلو وفوائد عظيمة.</p>
@@ -918,6 +918,8 @@ function redirectToThankYou() {
 </style>
 
 </html>
+
+
 
 
 
