--- a/index.html
+++ b/index.html
@@ -538,10 +538,10 @@
   <marquee behavior="scroll" direction="right" scrollamount="6">
     ⏰ العرض ينتهي هذا الأسبوع! 🚨 سارع بالطلب الآن قبل نفاد الكمية!
   </marquee>
-  <div class="top-buttons">
-    <a href="tel:+213662277555" class="phone-btn">📞 اتصل بنا</a>
-    <a href="https://wa.me/213662277555" target="_blank" class="whatsapp-btn">💬 واتساب</a>
-  </div>
+  <div class="top-botons">
+  <a href="tel:0555000000" class="phone-link">📞 0555 00 00 00</a>
+  <a href="https://wa.me/213555000000" class="whatsapp-link">💬 واتساب</a>
+</div>
 <!-- مسافة إضافية لتفادي تغطية العنوان -->
 <div style="margin-top: 60px;"></div>
 
@@ -942,6 +942,8 @@ function redirectToThankYou() {
 
 
     
+
+
 
 
 
