--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 
         header h1 {
             font-size: 2.2rem;
-            margin-bottom: 8px;
+            margin-bottom: 8px;.main-title {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #b85c00;
+    margin: 20px 0;
+    line-height: 1.4;
+}
+
         }
 
         header p {
@@ -576,8 +584,7 @@
 </style>
  <header>
      </div>
-            <h1>عسل الأطفال: طاقة وذكاء ونمو صحي</h1>
-            <p>وداعاً للحلويات الضارة! امنح طفلك هدية الطبيعة... مذاق حلو وفوائد عظيمة.</p>
+<h1 class="main-title">عسل الأطفال: طاقة وذكاء ونمو صحي</h1>            <p>وداعاً للحلويات الضارة! امنح طفلك هدية الطبيعة... مذاق حلو وفوائد عظيمة.</p>
         </div>
     </header>
  <section class="offers">
@@ -938,7 +945,10 @@ function redirectToThankYou() {
 
 
 
+
     
+
+
 
 
 
