--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
         header h1 {
             font-size: 2.2rem;
-            margin-bottom: 8px;.main-title {
+            margin-bottom: 8px; 
+        }
+            .main-title { 
+        
     text-align: center;
     font-size: 2.5rem;
     font-weight: bold;
@@ -946,7 +949,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
