--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@
 }
 .top-buttons .whatsapp-btn {
   background-color: #25D366; /* أخضر واتساب */
+}header p {
+    text-align: center;
 }
 </style>
  <header>
@@ -950,7 +952,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
