--- a/index.html
+++ b/index.html
@@ -541,7 +541,9 @@
                 flex-wrap: nowrap;
             }
         }
-    </style>
+   header p {
+    text-align: center;
+} </style>
 </head>
 <body>
 <!-- شريط علوي للتنبيه -->
@@ -954,6 +956,7 @@ function redirectToThankYou() {
 
 
     
+
 
 
 
