--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
         }
    header p {
     text-align: center;
-} </style>
+} 
+    </style>
 </head>
 <body>
 <!-- شريط علوي للتنبيه -->
@@ -955,7 +956,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
