--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
             font-size: 1rem;
             max-width: 700px;
             margin: auto;
+            header p {
+    text-align: center;
+}
         }
+        
 
         .offers-section {
             display: flex;
@@ -957,7 +961,9 @@ function redirectToThankYou() {
 
 
 
+
     
+
 
 
 
