--- a/thankyou.html
+++ b/thankyou.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>شكراً لطلبك</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f9f9f9;
-      padding: 50px;
-    }
-    .box {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      max-width: 500px;
-      margin: auto;
-    }
-    h1 {
-      color: #28a745;
-    }
-    p {
-      font-size: 18px;
-      color: #555;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: #28a745;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-    }
-    a:hover {
-      background: #218838;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>شكراً لطلبك</title>
+<style>
+  body {
+    font-family: 'Cairo', sans-serif;
+    background-color: #f0f8f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    color: #1a4d29;
+  }
+  .box {
+    background: white;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+  }
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
+  p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+  a {
+    display: inline-block;
+    padding: 12px 25px;
+    background: #2E7D32;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+  }
+  a:hover {
+    background: #1B5E20;
+  }
+</style>
 </head>
 <body>
   <div class="box">
-    <h1>✅ شكراً لك!</h1>
-    <p>لقد استلمنا طلبك وسنتواصل معك قريباً لتأكيد التفاصيل.</p>
-    <a href="index.html">⬅ الرجوع إلى الصفحة الرئيسية</a>
+    <h1>✅ شكراً لطلبك!</h1>
+    <p>تم استلام طلبك بنجاح. سيتواصل معك فريقنا لتأكيد الطلب قريباً.</p>
+    <a href="index.html">🔙 العودة إلى الصفحة الرئيسية</a>
   </div>
 </body>
 </html>
