--- a/index.html
+++ b/index.html
@@ -681,23 +681,23 @@
 </style>
 
 <form id="orderForm" 
-      action="https://docs.google.com/forms/d/e/XXXXXX/formResponse" 
+      action="https://docs.google.com/forms/d/e/1FAIpQLSey0reStrEVMgSwnsiM7cfGBHW-Hd-z0--pw6utolJsNE9nvA/formResponse" 
       method="POST" 
       target="hidden_iframe">
 
   <div class="form-group">
     <label>الاسم الكامل</label>
-    <input type="text" name="entry.111111" placeholder="أدخل اسمك الكامل" required>
+    <input type="text" name="entry.2134948299" placeholder="أدخل اسمك الكامل" required>
   </div>
 
   <div class="form-group">
     <label>رقم الهاتف</label>
-    <input type="tel" id="phone" name="entry.222222" placeholder="أدخل رقم الهاتف" required>
+    <input type="tel" id="phone" name="entry.2129297352" placeholder="أدخل رقم الهاتف" required>
   </div>
 
   <div class="form-group">
     <label>الولاية</label>
-    <select id="wilaya" name="entry.333333" required>
+    <select id="wilaya" name="entry.316484263" required>
       <option value="">-- اختر ولايتك --</option>
       <option value="الجزائر العاصمة">الجزائر العاصمة</option>
       <option value="وهران">وهران</option>
@@ -717,7 +717,7 @@
   </div>
 
   <!-- إدخال مخفي للمجموع الكلي -->
-  <input type="hidden" id="totalInput" name="entry.444444">
+  <input type="hidden" id="totalInput" name="entry.1217120028">
 
   <button type="submit">تأكيد الطلب</button>
 </form>
@@ -1057,7 +1057,10 @@ function redirectToThankYou() {
 
 
 
+
+
     
+
 
 
 
